--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.cassandra.schema-action=CREATE_IF_NOT_EXISTS
 spring.cassandra.request.timeout=10s
 spring.cassandra.connection.connect-timeout=10s
 spring.cassandra.connection.init-query-timeout=10s
+spring.main.web-application-type=none
+debug=true
