--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 spring.application.name=studysphere
 
-spring.cassandra.schema-action=CREATE_IF_NOT_EXISTS
-spring.cassandra.request.timeout=10s
-spring.cassandra.connection.connect-timeout=10s
-spring.cassandra.connection.init-query-timeout=10s
-spring.main.web-application-type=REACTIVE
 spring.main.allow-bean-definition-overriding=true
-logging.level.org.springframework=TRACE
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+spring.datasource.url=jdbc:postgresql://185.240.134.120:5432/studysphere
+spring.datasource.username=postgres
+spring.datasource.password=redacted
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.data.redis.host=185.240.124.120
+spring.data.redis.port=6379
+spring.data.redis.username=default
+spring.data.redis.password=redacted
