--- a/pom.xml
+++ b/pom.xml
@@ -156,9 +156,14 @@
 			<version>1.5.6</version>
 		</dependency>
 		<dependency>
-			<groupId>com.github.ajermakovics</groupId>
-			<artifactId>crdts</artifactId>
-			<version>0.2</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.14.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>33.2.1-jre</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
